--- a/lib/x11/Makefile.x11.in
+++ b/lib/x11/Makefile.x11.in
@@ -26,19 +26,19 @@ HEADERS     = ../../include/GL/glfw.h ../internal.h platform.h
 # Install GLFW static library
 ##########################################################################
 install: libglfw.a libglfw.pc
-	$(INSTALL) -d $(PREFIX)/lib
-	$(INSTALL) -c -m 644 libglfw.a $(PREFIX)/lib/libglfw.a
-	$(INSTALL) -d $(PREFIX)/include/GL
-	$(INSTALL) -c -m 644 ../../include/GL/glfw.h $(PREFIX)/include/GL/glfw.h
-	$(INSTALL) -d $(PREFIX)/lib/pkgconfig
-	$(INSTALL) -c -m 644 libglfw.pc $(PREFIX)/lib/pkgconfig/libglfw.pc
+	$(INSTALL) -d $(DESTDIR)$(PREFIX)/lib
+	$(INSTALL) -c -m 644 libglfw.a $(DESTDIR)$(PREFIX)/lib/libglfw.a
+	$(INSTALL) -d $(DESTDIR)$(PREFIX)/include/GL
+	$(INSTALL) -c -m 644 ../../include/GL/glfw.h $(DESTDIR)$(PREFIX)/include/GL/glfw.h
+	$(INSTALL) -d $(DESTDIR)$(PREFIX)/lib/pkgconfig
+	$(INSTALL) -c -m 644 libglfw.pc $(DESTDIR)$(PREFIX)/lib/pkgconfig/libglfw.pc
 
 
 ##########################################################################
 # Install GLFW static and shared libraries
 ##########################################################################
 dist-install: libglfw.so install
-	$(INSTALL) -c -m 644 libglfw.so $(PREFIX)/lib/libglfw.so
+	$(INSTALL) -c -m 644 libglfw.so $(DESTDIR)$(PREFIX)/lib/libglfw.so
 
 
 ##########################################################################
